# eks-and-friends

./: .gitignore  APP_ARCHITECTURE.md
.github/workflows/: build-images.yml
111_simple_terraform/: .terraform.lock.hcl  00-locals.tf  01-provider.tf  02-vpc.tf
apps/auth/: Cargo.toml  Dockerfile
apps/auth/src/: main.rs
apps/backend/: Cargo.toml  Dockerfile
apps/backend/src/: main.rs
apps/frontend/: Dockerfile  index.html  nginx.conf  package.json
apps/frontend/src/: App.jsx
apps/migrations/: Dockerfile  liquibase.properties
argocd-apps/: README.md  root-app.yaml
argocd-apps/apps/: auth.yaml  backend.yaml  frontend.yaml
reverse-engineering/: README.md  eks.tf  iam.tf  import.sh  kms.tf  locals.tf  node-groups.tf  outputs.tf  security-groups.tf  versions.tf  vpc.tf
reverse-engineering/policies/: cluster_custom.json  cluster_encryption.json  kms_key_policy.json
terraform-module/: .terraform.lock.hcl  01-eks.tf  01-networking.tf  02-eks.tf  03-iam.tf  04-helm.tf  05-addons.tf  06-gateway.tf  07-karpenter.tf  08-argocd-capability.tf  08-argocd-helm.tf  outputs.tf  variables.tf  versions.tf
terraform-module/iam/: AWSLoadBalancerController.json  KarpenterController.json.tftpl
terraform-pure/: .terraform.lock.hcl  01-networking.tf  02-eks.tf  03-nodes.tf  04-users-and-roles.tf  05-helm-provider.tf  06-metric-server.tf  07-pod-Identity-addon.tf  08-cluster-autoscaler.tf  09-cert-manager.tf  10-ebs-sci-driver.tf  11-openid-provide.tf  README.md  providers.tf  variables.tf  versions.tf
terragrunt/: README.md  common.hcl  root.hcl
(+49 files in other folders)
